chore: migrate from SPM to Xcode project
- Replace Package.swift with project.yml (XcodeGen)
- Move Sources/ to SysBar/ (standard Xcode layout)
- Add proper Info.plist with Xcode build variables
- Add SysBar.entitlements (sandbox disabled for syscalls)
- Add AppIcon.appiconset with generated PNGs
- Update Makefile to use xcodebuild
- Update .gitignore for Xcode project

--- a/SysBar/Info.plist
+++ b/SysBar/Info.plist
@@ -5,26 +5,30 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>en</string>
     <key>CFBundleExecutable</key>
-    <string>SysBar</string>
+    <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIconFile</key>
-    <string>AppIcon</string>
+    <string></string>
     <key>CFBundleIconName</key>
     <string>AppIcon</string>
     <key>CFBundleIdentifier</key>
-    <string>com.tibetos.SysBar</string>
+    <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
-    <string>SysBar</string>
+    <string>$(PRODUCT_NAME)</string>
     <key>CFBundlePackageType</key>
-    <string>APPL</string>
+    <string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
     <key>CFBundleShortVersionString</key>
-    <string>__VERSION__</string>
+    <string>$(MARKETING_VERSION)</string>
     <key>CFBundleVersion</key>
-    <string>1</string>
+    <string>$(CURRENT_PROJECT_VERSION)</string>
+    <key>LSApplicationCategoryType</key>
+    <string>public.app-category.utilities</string>
     <key>LSMinimumSystemVersion</key>
-    <string>15.0</string>
-<key>NSHighResolutionCapable</key>
+    <string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+    <key>LSUIElement</key>
+    <true/>
+    <key>NSHighResolutionCapable</key>
     <true/>
     <key>NSHumanReadableCopyright</key>
     <string>Copyright 2026 TibetOS. All rights reserved.</string>
