--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .DS_Store
-.build/
-.swiftpm/
-*.xcodeproj
 xcuserdata/
 DerivedData/
 build/
+*.ipa
+*.dSYM.zip
+*.dSYM
+*.xcarchive
 firebase-debug.log
