--- a/SysBar/Info.plist
+++ b/SysBar/Info.plist
@@ -27,9 +27,13 @@
     <key>LSMinimumSystemVersion</key>
     <string>$(MACOSX_DEPLOYMENT_TARGET)</string>
     <key>LSUIElement</key>
-    <true/>
+    <false/>
     <key>NSHighResolutionCapable</key>
     <true/>
+    <key>NSSupportsAutomaticTermination</key>
+    <false/>
+    <key>NSSupportsSuddenTermination</key>
+    <false/>
     <key>NSHumanReadableCopyright</key>
     <string>Copyright 2026 TibetOS. All rights reserved.</string>
 </dict>
